# tor-pipeline

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_scrape.py  parallel_scrape.py  quickstart.py
tests/: test_checkpoint.py  test_proxy.py  test_workers.py
tor_pipeline/: __init__.py  browser.py  challenge.py  checkpoint.py  cli.py  interceptor.py  proxy.py  tor.py  workers.py
